Fix footer background gap and reduce social media icon sizes on mobile

--- a/CSS/Forside.css
+++ b/CSS/Forside.css
@@ -247,6 +247,9 @@
    justify-content: center;
    background-color: #161616;
 }
+footer {
+    background-color: #161616;
+}
 footer h3{
     font-size: 2vw;
     color: #ff2d55;
@@ -589,11 +592,11 @@ p{
   }
 
   .footerSection .FooterLi a img.instagram {
-    width: 3.4rem;
+    width: 2.2rem;
   }
 
   .footerSection .FooterLi a img.facebook {
-    width: 2rem;
+    width: 1.4rem;
     margin-right: 0.5rem;
     margin-left: 0.4rem;
   }
